--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>JSでツムツム風ゲーム</title>
+  <title>ツムツム風ゲーム</title>
   <style>
     body {
       display: flex;
@@ -100,4 +100,5 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.18.0/matter.min.js"></script>
   <script src="game.js"></script>
 </body>
+
 </html>
