--- a/index.html
+++ b/index.html
@@ -44,3 +44,64 @@
         top: 1.5%;
         left: 0;
         width: 100%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 0 5%;
+        box-sizing: border-box;
+        font-size: clamp(16px, 4vw, 24px); /* 文字サイズを可変に */
+        visibility: hidden;
+    }
+    #shuffle-button {
+        padding: 8px 16px;
+        font-size: clamp(12px, 3vw, 16px);
+        cursor: pointer;
+        z-index: 10;
+        visibility: hidden;
+    }
+    /* オーバーレイスクリーン共通スタイル */
+    .screen {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.7);
+        color: white;
+        display: flex; 
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        z-index: 100;
+    }
+    .screen h2 { font-size: clamp(32px, 10vw, 48px); margin: 0; }
+    .screen div { font-size: clamp(24px, 7vw, 32px); margin: 20px 0; }
+    .screen button { padding: 15px 30px; font-size: clamp(18px, 5vw, 24px); cursor: pointer; }
+    
+    #game-over-screen { display: none; }
+  </style>
+</head>
+<body>
+    <div id="game-container">
+        <div id="ui-container">
+            <div id="score-container">Score: <span id="score">0</span></div>
+            <button id="shuffle-button">Shuffle</button>
+            <div id="timer-container">Time: <span id="timer">60</span></div>
+        </div>
+        <div id="start-screen" class="screen">
+            <h2>ツムツム風ゲーム</h2>
+            <div>
+                <button id="start-button">ゲーム開始</button>
+            </div>
+        </div>
+        <div id="game-over-screen" class="screen">
+            <h2>Time Up!</h2>
+            <div id="final-score">Final Score: <span>0</span></div>
+            <button id="restart-button">Restart</button>
+        </div>
+    </div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.18.0/matter.min.js"></script>
+  <script src="game.js"></script>
+</body>
+</html>
