--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-  <title>JSでツムツム風ゲーム</title>
+  <title>ツムツム風ゲーム</title>
   <style>
     /* ▼▼▼▼▼ スマホ対応のためにスタイル全体を修正 ▼▼▼▼▼ */
     html, body {
@@ -105,3 +105,4 @@
   <script src="game.js"></script>
 </body>
 </html>
+
